# colorspace-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  generate_data.py  rustfmt.toml
benches/: spd_to_xyz.rs  xyz_to_rgb.rs
examples/: convert.rs  convert_with_matrices.rs  hero_wavelength_sampling.rs  spectral_render.rs
resources/: gen_ref.py
src/: chromatic_adaptation.rs  chromaticity.rs  cmf.rs  color_checker.rs  color_matching_function.rs  color_space_rgb.rs  colorchecker.rs  illuminant.rs  interpolation.rs  lab.rs  lib.rs  macros.rs  math.rs  photometry.rs  prelude.rs  rgb.rs  spd.rs  spd_conversion.rs  spectral_power_distribution.rs  traits.rs  transform.rs  uplifting.rs  vspd.rs  xyz.rs
