[package]
name = "colorspace"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.15.0"
num-traits = "0.2.8"
lazy_static = "1.3.0"
float-cmp = "0.5.0"
itertools = "0.8.0"
maplit = "1.0.1"
numeric_literals = "0.1.0"
cfg-if = "0.1.9"
simdeez = "0.6.4"
rand = "0.7.0"

[dev-dependencies]
criterion="0.2"

[[bench]]
name='spd_to_xyz'
harness=false

[[bench]]
name='xyz_to_rgb'
harness=false
