[package]
name = "colorspace"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "A crate for colorimetry covering spectral, RGB, XYZ, L*a'b' and conversions thereof"
documentation = "https://docs.rs/colorspace-rs/0.1.0/"
repository = "https://github.com/anderslanglands/colorspace-rs"
keywords = ["color", "colour", "colorimetry", "graphics"]
categories = ["computer-vision", "graphics", "multimedia", "rendering"]

[badges]
travis-ci = {repository = "anderslanglands/colorspace-rs", branch="master"}

[dependencies]
derive_more = "0.15.0"
num-traits = "0.2.8"
lazy_static = "1.3.0"
float-cmp = "0.5.0"
itertools = "0.8.0"
maplit = "1.0.1"
numeric_literals = "0.1.0"
cfg-if = "0.1.9"
simdeez = "0.6.4"
rand = "0.7.0"

[dev-dependencies]
criterion="0.2"
png = "0.16.3"

[[bench]]
name='spd_to_xyz'
harness=false

[[bench]]
name='xyz_to_rgb'
harness=false
